# src/routes/rotaRoutes.js
@@ -2,8 +2,8 @@ const express = require("express");
 const router = express.Router();
 const rotaController = require("../controllers/rotaController.js");
 const { admin, vigia } = require("../middlewares/permissaoMiddleware.js");
-const token = require("../middlewares/tokenMiddleware.js");
 const bodyParser = require("body-parser");
+const token = require("../middlewares/tokenMiddleware.js");
 require("dotenv").config();
 
 router.use(bodyParser.json());
@@ -11,5 +11,8 @@ router.use(bodyParser.json());
 router.post("/create", rotaController.rotaCreateController);
 router.post("/delete", rotaController.rotaDeleteController);
 router.get("/list", rotaController.listController);
+router.post("/listLocals", rotaController.listLocals)
+//Catalogar no Swagger
+router.post("/defUser", rotaController.defUserRota)
 
 module.exports = router;
